--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node bin/dev"
+    "start": "node server.js"
   },
   "author": "Roman Tuomisto",
   "license": "ISC",
