--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Roman Tuomisto",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
@@ -18,7 +19,9 @@
     "express": "^4.15.4",
     "express-flash": "0.0.2",
     "express-session": "^1.15.5",
-    "mongoose": "4.9.7"
+    "mongoose": "4.9.7",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "dotenv": "^4.0.0"
