--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "font-awesome": "^4.7.0",
     "masonry": "^4.2.0",
     "jquery-easing": "*",
-    "imagesloaded": "^4.1.3"
+    "imagesloaded": "^4.1.3",
+    "cropperjs": "^1.0.0"
   }
 }
