--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Roman Tuomisto",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.108.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "connect-mongo": "^1.3.2",
@@ -20,6 +21,8 @@
     "express-flash": "0.0.2",
     "express-session": "^1.15.5",
     "mongoose": "4.9.7",
+    "multer": "^1.3.0",
+    "multer-s3": "^2.7.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   },
