--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "express": "^4.15.4",
     "express-flash": "0.0.2",
     "express-session": "^1.15.5",
+    "file-type": "^6.1.0",
     "mongoose": "4.9.7",
     "multer": "^1.3.0",
     "multer-s3": "^2.7.0",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "read-chunk": "^2.1.0"
   },
   "devDependencies": {
     "dotenv": "^4.0.0"
