--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-flash": "0.0.2",
     "express-session": "^1.15.5",
     "file-type": "^6.1.0",
+    "moment": "^2.18.1",
     "mongoose": "4.9.7",
     "multer": "^1.3.0",
     "multer-s3": "^2.7.0",
